[fix]style-li:before

--- a/src/ckeditor.scss
+++ b/src/ckeditor.scss
@@ -18,6 +18,7 @@
 
 .ck-editor__editable ol>li:before {
     content: attr(data-content);
+    width: 2em;
     background-color: #d3d3d3;
     vertical-align: top;
 }
