[fix]spanClass-div

--- a/src/ckeditor.scss
+++ b/src/ckeditor.scss
@@ -1,4 +1,4 @@
-.ck-editor__editable p.spanClasses {
+.ck-editor__editable div.spanClasses {
     display: inline-block;
     width: calc(100% - 2em);
     margin: 0;
