--- a/src/ckeditor.scss
+++ b/src/ckeditor.scss
@@ -1,44 +1,46 @@
-.ck-editor__editable div.spanClasses {
-    display: inline-block;
-    width: calc(100% - 2em);
-    margin: 0;
-}
-
-.ck-editor__editable ol {
-    margin-left: 1em;
-}
-
-.ck-editor__editable>ol {
-    margin-left: 0;
-}
-
-.ck-editor__editable ol>li>ul:first-of-type {
-    margin-left: 3em;
-}
-
-.ck-editor__editable ol>li:before {
-    content: attr(data-content);
-    width: 2em;
-    background-color: #d3d3d3;
-    vertical-align: top;
-}
-
-.ck-editor__editable ul {
-    list-style-type: disc;
-    margin-left: 1em;
-}
-
-/* li 也應該繼承變數 */
-.ck-editor__editable ul>li {
-    list-style-type: inherit;
-}
-
 /* This selector targets the editable element (excluding comments). */
 .ck-editor__editable_inline:not(.ck-comment__input *) {
     height: 200px;
     overflow-y: auto;
     font-size: 14px;
     font-family: 標楷體, Arial, "Microsoft JhengHei Revise", 微軟正黑體, "Microsoft JhengHei", 新細明體, PMingLiU, sans-serif;
+}
+
+.ck-content div.spanClasses {
+    display: inline-block;
+    width: calc(100% - 2em);
+    margin: 0;
+}
+
+.ck-content ol {
+    margin-left: 1em;
+}
+
+.ck-content>ol {
+    margin-left: 0;
+}
+
+.ck-content ol>li>ul:first-of-type {
+    margin-left: 3em;
+}
+
+.ck-content ol>li:before {
+    content: attr(data-content);
+    display: inline-block;
+    width: 2em;
+    height: 1em;
+    background-color: #d3d3d3;
+    vertical-align: top;
+}
+
+.ck-content ul {
+    list-style-type: disc;
+    margin-left: 1em;
+}
+
+/* li 也應該繼承變數 */
+.ck-content ul>li {
+    list-style-type: inherit;
 }
 
 $types: disc, circle, square;
