--- a/src/ckeditor.scss
+++ b/src/ckeditor.scss
@@ -1,3 +1,13 @@
+ol,
+ul,
+li {
+    list-style: none;
+}
+
+.hide {
+    display: none;
+}
+
 /* This selector targets the editable element (excluding comments). */
 .ck-editor__editable_inline:not(.ck-comment__input *) {
     height: 200px;
